# lens-research

./: .gitignore  README.md  arxive.py  crossreff.py  github.py  main.py  openalex.py  pyproject.toml  reddit.py  ssc.py  test_collectors.py  wiki.py
collectors/: arxiv.py  github.py  openalex.py  reddit.py  semantic_scholar.py  wiki.py
core/: registry.py  report_generator.py  report_templates.py  workspace.py
core/processor/: processor.py  ranker.py  selector.py
lens/: cli.py
lens/collectors/: arxiv.py  crossref.py  reddit.py  semantic_scholar.py
lens/core/: collector_manager.py  registry.py  report_exporters.py  report_generator.py  report_parsers.py  utils.py  workspace.py
lens/core/processor/: __init__.py  categorizer.py  deduplicator.py  processor.py
workspace/Quantum_computing_2026_20260601_213551/: metadata.json
workspace/Quantum_computing_2026_20260601_213551/raw/: crossref.json  github.json  openalex.json  wikipedia.json
