[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lensdev"
version = "0.1.0"
description = "Local AI-powered research agent"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Sarthak" }
]

dependencies = [
    "click",
    "requests",
    "beautifulsoup4",
    "rich"
]

[project.urls]
Homepage = "https://lensdev.pages.dev"
Repository = "https://github.com/<your-username>/<repo>"

[project.scripts]
lens = "lens.cli:main"

[tool.setuptools]
packages = ["lens"]
