[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lensdev"
version = "0.1.1"
description = "Local AI-powered research agent"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Sarthak" }
]

dependencies = [
    "click",
    "requests",
    "beautifulsoup4",
    "rich"
]

[project.urls]
Homepage = "https://github.com/developer8sarthak/lens-research"
Repository = "https://github.com/developer8sarthak/lens-research"
Issues = "https://github.com/developer8sarthak/lens-research/issues"

[project.scripts]
lens = "lens.cli:main"

[tool.setuptools]
packages = ["lens"]
