[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lensdev"
version = "0.1.2"
description = "Local AI research agent that generates structured research workspaces"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Sarthak" }
]

dependencies = [
    "click",
    "requests",
    "beautifulsoup4",
    "rich"
]

[project.urls]
Homepage = "https://pypi.org/project/lensdev/"
Repository = "https://github.com/developer8sarthak/lens-research"
Documentation = "https://lensdev.pages.dev/"
Issues = "https://github.com/developer8sarthak/lens-research/issues"

[project.scripts]
lens = "lens.cli:main"

[tool.setuptools]
packages = ["lens"]
